# ds-projects-portfolio

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ROADMAP.md  TODO.md  advanced_experimentation_platform.py  analyze_experiment.py  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
ab_testing/: ab_testing.ipynb  ab_testing_cookie_cats_playbook.ipynb  ab_testing_ecommerce_playbook.ipynb  ab_testing_guardrails_multimetric.ipynb  ab_testing_modern_multi.ipynb  ab_testing_modern_playbook.ipynb  ab_testing_offpolicy_policy_switch.ipynb  ab_testing_playbook_pro.ipynb  ab_testing_pricing_playbook.ipynb  ab_testing_retention_survival.ipynb  ab_testing_sequential_always_valid.ipynb  bandits_exploration_exploitation.ipynb  experiment_story_templates.ipynb  geo_experiments_playbook.ipynb  meta_analysis_experiment_portfolio.ipynb
churn_prediction/: README.md  telco_churn_monitoring_and_drift.ipynb  telco_churn_project.ipynb  telco_churn_survival_analysis.ipynb  telco_churn_tuning_and_costs.ipynb
config/: advanced_config.yaml  basic_config.yaml
modern-bank-churn/: 01_eda_and_baselines.ipynb  02_lightgbm_optuna_shap.ipynb  03_segment_insights.ipynb  bank_churn_clv_retention.ipynb  bank_churn_mlops_api_batch.ipynb  bank_churn_uplift_modelling.ipynb
recommendation-system/: README.md  movielens_ensemble_ranking.ipynb  movielens_ensemble_stacking.ipynb  movielens_hybrid_lightfm_genres_tags.ipynb  movielens_hybrid_ranking_ensemble.ipynb  movielens_ltr_gradient_boosting_stack.ipynb  movielens_recommender_modern_libs.ipynb  movielens_recommender_system_extended.ipynb
src/: __init__.py
src/data_processing/: __init__.py  cleaning.py
src/statistics/: __init__.py  core.py
src/vizualization/: __init__.py  plots.py
src/web/: dashboard.js
time-series/: datasets_time_series_forecasting.md  energy_daily_pattern_clustering.ipynb  energy_dr_simulation.ipynb  prepare_metrla_graph_data.py  prepare_metrla_graph_data_fixed.py  spain_energy_model_zoo.ipynb  spain_energy_weather_forecasting.ipynb  timeseries_energy_forecasting.ipynb  traffic_gnn_spatiotemporal.ipynb  traffic_modern_forecasting.ipynb
